
Bugfixes:

- build process:
  - fix version number detection in GitHub CI builds

Enhancements:

- xgbsplay:
  - loop mode can be changed interactively (use the 'l' key)
  - display pause status when playback is paused
  - display current loop mode
  - add i18n

- configuration:
  - deprecate 'loop' option in gbsplayrc in favor of new 'loop_mode'
    with values 'none', 'range' and 'single'

- documentation:
  - describe loop mode keybinding in gbsplay(1) manpage


2025/02/16  -  0.0.98
~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbsplay:
  - don't mess up the screen with underrun errors from the ALSA plugout
    when resuming from a pause
  - fix Pipewire plugout for Pipewire versions greater than 0.3.x

- build process:
  - fix i18n on brew/MaOS
  - disable i8n during unit tests

Enhancements:

- gbsplay:
  - add proper pause handling to ALSA plugout

- contrib:
  - add Zsh command completion for gbsplay, gbsinfo, gbs2gb and gbs2ogg
  - add missiong options to bash completion script and fix some edge cases

- documentation:
  - document -- option to end option parsing
  - update xgbsplay(1) manpage


2024/04/17  -  0.0.97
~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbs core:
  - fix noise channel LSFR for more faithful drumtracks in most ROMs
  - fix generated MIDI files being ~1.5% too slow
  - reset cartridge RAM on subsong change to prevent the state of a
    subsong from influencing later subsongs

- gbsplay:
  - fix display of unknown version number (gbsplay -V)

Enhancements:

- build process:
  - display version number during configure
  - automatically provide a .tar.gz on the GitHub release page that
    contains proper version information like the old manual releases


2024/02/04  -  0.0.96
~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- build process:
  - fix build errors of devdsp plugout on FreeBSD

Enhancements:

- gbsplay:
  - add PipeWire plugout
  - add application and filename to audio stream metadata
    (currently works with PipeWire, PulseAudio and with SDL2 depending